--- a/estilos.css
+++ b/estilos.css
@@ -7,6 +7,7 @@ html, body {
 }
 
 body {
+    background-color: #000;
     background: url("imagenes/_MG_5152b.jpg") no-repeat center/cover;
     min-height: 100vh;
     display: flex;
@@ -73,4 +74,5 @@ body {
     .texto-memoria {
         font-size: 1rem;
     }
+
 }
