--- a/estilos.css
+++ b/estilos.css
@@ -2,6 +2,7 @@
 * { box-sizing: border-box; margin: 0; padding: 0; }
 
 html, body {
+    background-color: #000
     height: 100%;
     font-family: Arial, sans-serif;
 }
@@ -60,7 +61,7 @@ body {
     margin-top: 0.8rem;
     color: #ffeb3b;        /* amarillo */
     font-size: 1.1rem;
-    text-shadow: 1px 1px 2px #000; /* legibilidad sobre fondo */
+    text-shadow: 1px 1px 2px #fff; /* legibilidad sobre fondo */
 }
 
 /* ----------- RESPONSIVE ----------- */
@@ -76,3 +77,4 @@ body {
     }
 
 }
+
