--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,10 @@
 /* reset básico */
 * { box-sizing: border-box; margin: 0; padding: 0; }
 
-html, body { height: 100%; font-family: Arial, sans-serif; }
+html, body { 
+	height: 100%; 
+	font-family: Arial, sans-serif; 
+}
 
 body {
     background: #000 url("imagenes/_MG_5152b.jpg") no-repeat center/cover;
