--- a/estilos-int.css
+++ b/estilos-int.css
@@ -270,6 +270,25 @@ body {
   color: #ff0000; 
   font-weight: 700;
 }
+
+/* Sección memoria */
+        .memoria {
+            margin-top: 3rem;
+        }
+        .foto-memoria {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 3px solid #ff0000;
+        }
+        .texto-memoria {
+            margin-top: 1rem;
+            font-size: 1.1rem;
+            line-height: 1.4;
+        }
+
+
 /* ----------- RESPONSIVE ----------- */
 @media (max-width: 600px) {
     .logo img { max-height: 120px; }
