--- a/estilos-int.css
+++ b/estilos-int.css
@@ -52,7 +52,7 @@ body {
 .nav-principal a:hover,
 .nav-principal a.active {
     background: #ac40f8;
-    color: #ff0000;
+    color: #ffffff;
 }
 
 /* ---------- contenido general ---------- */
